<resources>
    <string name="app_name" translatable="false">hazyair</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_agree">AGREE</string>
    <string name="button_exit">DISAGREE &amp; EXIT</string>
    <string name="channel_name" translatable="false">hazyair</string>
    <string name="channel_description">Air quality monitoring</string>
    <string name="chart_no_data_available">No data available.</string>
    <string name="contentDescription_address">Address</string>
    <string name="contentDescription_place">Place</string>
    <string name="contentDescription_sensor_data">Sensor data</string>
    <string name="data_poland">Poland</string>
    <!--<string name="data_source_airly" translatable="false">AIRLY</string>-->
    <string name="data_source_gios">CIEP</string>
    <!--<string name="data_source_smoksmog" translatable="false">SMOKSMOG</string>-->
    <string name="message_crashlytics">In order to changes make effect please restart the application.</string>
    <string name="message_license">\"hazyair\" application is an open source project developed under permissive MIT License.\n\nBy using this application you agree to terms and conditions defined by CIEP at http://powietrze.gios.gov.pl/pjp/content/terms_of_service.\n\nYou are kindly requested to submit any discovered issues under https://github.com/hazyair/android/issues.\n\nYou could also reach me out at marcin.sielski@gmail.com before leaving negative comment on Google Play Store.\n\nEnjoy!</string>
    <string name="message_location">We respect your privacy. For the best user experience please allow this application to access location services. The location information will be solely used to present personalized data and will not be sent outside of the application.</string>
    <string name="message_network">Please check your network connection.</string>
    <string name="message_maximum">Already added maximum number of stations.</string>
    <string name="text_km" translatable="false">km</string>
    <string name="text_no_station_selected">No station selected yet.</string>
    <string name="text_station_by">Station by</string>
    <string name="title_add_station">Add station</string>
    <string name="title_crashlytics">Application restart required</string>
    <string name="title_find_station">Find station</string>
    <string name="title_license">License</string>
    <string name="title_location">Location permission request</string>
    <string name="title_network">Network connection</string>
    <!--<string name="title_notification">Air quality standards exceeded!</string>-->
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_remove_station">Remove station</string>
    <string name="title_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_summary_general">General settings</string>
    
    <string name="pref_title_crashlytics">Enable crash reports</string>
    <string name="pref_description_crashlytics">Allows to send data about application crashes</string>
    <string name="pref_key_crashlytics" translatable="false">io.github.hazyair.PREF_CRASHLYTICS</string>

    <string name="pref_header_sync">Data &amp; sync</string>
    <string name="pref_summary_sync">Data synchronization settings</string>

    <string name="pref_title_sync_on_boot">Enable sync on device boot</string>
    <string name="pref_description_sync_on_boot">First data sync will be performed as soon as device is started.</string>
    <string name="pref_key_sync_on_boot" translatable="false">io.github.hazyair.PREF_SYNC_ON_BOOT</string>


    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_key_sync_frequency" translatable="false">io.github.hazyair.PREF_SYNC_FREQUENCY</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_summary_notifications">Notifications settings</string>

    <string name="pref_title_notifications_on_boot">Enable notifications on device boot</string>
    <string name="pref_description_notifications_on_boot">First notification will be sent as soon as device is started.</string>
    <string name="pref_key_notifications_on_boot" translatable="false">io.github.hazyair.PREF_NOTIFICATIONS_ON_BOOT</string>

    <string name="pref_title_notifications_frequency">Max notification frequency</string>
    <string name="pref_key_notifications_frequency" translatable="false">io.github.hazyair.PREF_NOTIFICATIONS_FREQUENCY</string>

    <string-array name="pref_notifications_frequency_titles">
        <item>Disable</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_notifications_frequency_values">
        <item>0</item>
        <item>30</item>
        <item>60</item>
        <item>360</item>
    </string-array>

    <string name="privacy_link" translatable="false">https://hazyair.github.io/android</string>
    <string name="privacy_play_name" translatable="false">Google Play Services</string>
    <string name="privacy_play_link" translatable="false">https://policies.google.com/privacy</string>
    <string name="privacy_analytics_name" translatable="false">Firebase Analytics</string>
    <string name="privacy_analytics_link" translatable="false">https://firebase.google.com/policies/analytics</string>
    <string name="privacy_fabric_name" translatable="false">Fabric</string>
    <string name="privacy_fabric_link" translatable="false">https://fabric.io/privacy</string>
    <string name="gdpr_type_location" translatable="false">location</string>
</resources>
