<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="io.github.hazyair.gui.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"
        android:summary="@string/pref_summary_general"/>

    <header
        android:fragment="io.github.hazyair.gui.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications"
        android:summary="@string/pref_summary_notifications"/>

    <header
        android:fragment="io.github.hazyair.gui.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_sync"
        android:summary="@string/pref_summary_sync"/>

</preference-headers>
