<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/title_find_station"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/title_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:orderInCategory="4"
        android:title="@string/title_license" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="5"
        android:title="@string/title_privacy" />
</menu>